--- a/!! ROBA EXTRA !!/impostazioni (backup).html
+++ b/!! ROBA EXTRA !!/impostazioni (backup).html
@@ -144,6 +144,103 @@
 
                         </div>
                     </div>
+                    
+                    <!-- METODI DI PAGAMENTO -->
+
+                    <div class="panel panel-default">
+
+                        <div class="panel-heading">
+                            <div class="pull-left">
+                                <h4>Metodi di pagamento</h4>
+                            </div>
+                            <div class="header-center">
+                            </div>
+                            <div class="pull-right">
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+
+                        <div class="panel-body">
+                            <table class="table">
+                                <tr>
+                                    <div class="alert alert-success" role="alert">
+                                        <i class="fa fa-check"></i>
+                                        <span class="sr-only">Error:</span> Metodo selezionato
+                                    </div>
+                                </tr>
+                                <tr>
+                                    <td>Tipo</td>
+                                    <td>Postepay</td>
+                                </tr>
+                                <tr>
+                                    <td>Numero</td>
+                                    <td>************1769</td>
+                                </tr>
+                                <tr>
+                                    <td>Scadenza</td>
+                                    <td>07/2019</td>
+                                </tr>
+                                <tr>
+                                    <td>Intestatario</td>
+                                    <td>Pinco Pallino</td>
+                                </tr>
+                                <tr>
+                                    <td>Indirizzo</td>
+                                    <td>
+                                        <div>
+                                            <p>Pinco Pallino</p>
+                                            <p>Via Le Mani Dal Culo, 0</p>
+                                            <p>Trepalle, Sondrio 23030</p>
+                                            <p>Italia</p>
+                                            <p>Telefono: 3406175005</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+                            <button class="btn btn-default">Modifica</button>
+                            <button class="btn btn-default">Rimuovi</button>
+                        </div>
+
+                        <hr style="margin-bottom: 25px; border-color: #DEDEDE;" />
+
+                        <div class="panel-body">
+                            <table class="table">
+                                <tr>
+                                    <td>Tipo</td>
+                                    <td>MasterCard</td>
+                                </tr>
+                                <tr>
+                                    <td>Numero</td>
+                                    <td>************1669</td>
+                                </tr>
+                                <tr>
+                                    <td>Scadenza</td>
+                                    <td>11/2017</td>
+                                </tr>
+                                <tr>
+                                    <td>Intestatario</td>
+                                    <td>Pinco Pallino</td>
+                                </tr>
+                                <tr>
+                                    <td>Indirizzo</td>
+                                    <td>
+                                        <div>
+                                            <p>Pinco Pallino</p>
+                                            <p>Via Col Vento, 8</p>
+                                            <p>Trieste, Trieste 34100</p>
+                                            <p>Italia</p>
+                                            <p>Telefono: 3406175005</p>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+
+                            <button class="btn btn-default">Seleziona</button>
+                            <button class="btn btn-default">Modifica</button>
+                            <button class="btn btn-default">Rimuovi</button>
+                        </div>
+
+                    </div>
 
                 </div>
             </div>
