--- a/navbar_carrellovuoto.html
+++ b/navbar_carrellovuoto.html
@@ -102,7 +102,7 @@
                     </ul>
                 </li>
 
-                <li><a href="/carrello.html"><i class="fa fa-shopping-cart"></i> </a>
+                <li><a href="/carrello_vuoto.html"><i class="fa fa-shopping-cart"></i> </a>
                 </li>
             </ul>
 
