--- a/viaggi/acquisto-viaggio_riepilogo.html
+++ b/viaggi/acquisto-viaggio_riepilogo.html
@@ -90,7 +90,7 @@
                                     <p>Dal 01/05/2015 al 07/05/2015</p>
                                     <p>2 adulti</p>
                                     <p>0 escursioni</p>
-                                    <p><strong>Totale EUR 1.200,00</strong>
+                                    <p><strong>Totale EUR 1.700,00</strong>
                                     </p>
                                 </div>
                             </div>
@@ -99,25 +99,13 @@
                         <hr style="margin-top: 2px; margin-bottom: 2px; border-color: #DEDEDE;" />
 
                         <div class="panel-body">
-                            <p>Eventuali documenti/biglietti verranno recapitati presso:</p>
+                            <p>I documenti di viaggio verranno recapitati a:</p>
                             <div>
-                                <p>Pinco Pallino</p>
-                                <p>Via Le Mani Dal Culo, 0</p>
-                                <p>Trepalle, Sondrio 23030</p>
+                                <p>Elena Colombo</p>
+                                <p>via Monte Fato, 1</p>
+                                <p>30170 Mestre (VE)</p>
                                 <p>Italia</p>
                                 <p>Telefono: 3406175005</p>
-                            </div>
-                        </div>
-
-                        <hr style="margin-top: 2px; margin-bottom: 2px; border-color: #DEDEDE;" />
-
-
-                        <div class="panel-body">
-                            <p>Il pagamento verrà effettuato tramite:</p>
-                            <div>
-                                <p>Postepay ************1769</p>
-                                <p>Scadenza 07/2019</p>
-                                <p>Intestata a Pinco Pallino</p>
                             </div>
                         </div>
 
@@ -126,8 +114,7 @@
                         <div class="panel-body">
 
                             <p class="text-right">
-                                Codice sconto
-                                <input type="text" value="THDKVM5U" style="text-align: right;">
+                                Codice sconto: <b>THDKVM5U</b>
                             </p>
 
                             <table class="table ">
@@ -136,7 +123,7 @@
                                         <p>Viaggi</p>
                                     </td>
                                     <td>
-                                        <p class="text-right ">EUR 3.300,00</p>
+                                        <p class="text-right ">EUR 1.300,00</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -144,7 +131,7 @@
                                         <p>Biglietti</p>
                                     </td>
                                     <td>
-                                        <p class="text-right ">EUR 280,00</p>
+                                        <p class="text-right ">EUR 450,00</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -160,15 +147,7 @@
                                         <p>Sconti</p>
                                     </td>
                                     <td>
-                                        <p class="text-right ">EUR 61,00</p>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <p>Codici</p>
-                                    </td>
-                                    <td>
-                                        <p class="text-right ">EUR 0,00</p>
+                                        <p class="text-right ">EUR 57,00</p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -177,7 +156,7 @@
                                         </p>
                                     </td>
                                     <td>
-                                        <p class="text-right "><strong>EUR 3.526,00</strong>
+                                        <p class="text-right "><strong>EUR 1.700,00</strong>
                                         </p>
                                     </td>
                                 </tr>
