Pulizia del codice
Pulizia e sistemazione del codice per quanto riguarda i loading e gli
script.

--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
             <hr>
             <div class="container narrow row-fluid">
 
-                <!--- RIGA SOCIAL BUTTONS --->
+                <!-- RIGA SOCIAL BUTTONS -->
 
                 <div id="social" class="row">
                     <ul class="list-inline">
@@ -23,7 +23,7 @@
                     </ul>
                 </div>
 
-                <!--- RIGA SHORTLINKS --->
+                <!-- RIGA SHORTLINKS -->
 
                 <div id="shortlinks" class="row">
                     <ul class="list-inline">
@@ -65,7 +65,7 @@
                 </div>
                 <hr>
 
-                <!--- RIGA COPYRIGHT --->
+                <!-- RIGA COPYRIGHT -->
 
                 <div class="row" id="copyright">
                     <p class="pull-left">Glas Travels &reg; 2015 | <a href="/sitemap.xml">Mappa del sito</a>
