--- a/viaggi/acquisto-viaggio_transazione.html
+++ b/viaggi/acquisto-viaggio_transazione.html
@@ -1,4 +1,4 @@
-<!--- Designed by Giorgia Bosello, Luca Pinton, Aleksandar Djokic, Sergio Nalesso (Glas) --->
+<!-- Designed by Giorgia Bosello, Luca Pinton, Aleksandar Djokic, Sergio Nalesso (Glas) -->
 
 <!DOCTYPE html>
 <html lang="it">
