--- a/recensioni/20140726-1_maldive.html
+++ b/recensioni/20140726-1_maldive.html
@@ -1,4 +1,4 @@
-<!--- Designed by Giorgia Bosello, Luca Pinton, Aleksandar Djokic, Sergio Nalesso (Glas) --->
+<!-- Designed by Giorgia Bosello, Luca Pinton, Aleksandar Djokic, Sergio Nalesso (Glas) -->
 
 <!DOCTYPE html>
 <html lang="it">
@@ -39,11 +39,11 @@
 <body>
     <div class="background_body">
 
-        <!--- LOGO + HEADER + MENU --->
+        <!-- LOGO + HEADER + MENU -->
 
         <div id="navbar"></div>
 
-        <!--- PAGE --->
+        <!-- PAGE -->
 
         <div class="container">
 
