--- a/viaggi/acquisto-viaggio_riepilogo.html
+++ b/viaggi/acquisto-viaggio_riepilogo.html
@@ -1,4 +1,4 @@
-<!--- Designed by Giorgia Bosello, Luca Pinton, Aleksandar Djokic, Sergio Nalesso (Glas) --->
+<!-- Designed by Giorgia Bosello, Luca Pinton, Aleksandar Djokic, Sergio Nalesso (Glas) -->
 
 <!DOCTYPE html>
 <html lang="it">
@@ -35,11 +35,11 @@
 <body>
     <div class="background_body">
 
-        <!--- LOGO + HEADER + MENU --->
+        <!-- LOGO + HEADER + MENU -->
 
         <div id="navbar"></div>
 
-        <!--- PAGE --->
+        <!-- PAGE -->
 
         <div class="container">
 
@@ -175,25 +175,28 @@
             </div>
         </div>
 
+        
         <!-- FOOTER -->
 
         <div id="footer"></div>
 
     </div>
 
+    
+    <!-- SCRIPTS -->
+
+    <!-- Load page from id start -->
+    <script>
+        $("#navbar").load("/navbar.html");
+    </script>
+
+    <script>
+        $("#footer").load("/footer.html");
+    </script>
+    <!-- Load page from id end -->
+
     <!-- Bootstrap Javascript Core-->
-
-    <script src="/js/bootstrap.min.js "></script>
-    <!-- <script src="js/docs.min.js "></script> -->
-
-    <!-- scripts parts -->
-
-    <script>
-        $("#navbar ").load("/navbar_conparigi.html ");
-    </script>
-    <script>
-        $("#footer ").load("/footer.html ");
-    </script>
+    <script src="/js/bootstrap.min.js"></script>
 
 </body>
 
