--- a/profilo-modifica.html
+++ b/profilo-modifica.html
@@ -108,11 +108,11 @@
                                         <br>
                                         <tr>
                                             <td>e-mail</td>
-                                            <td><input size="50" type="email" name="email" value="elena.colombo@email.it" required></td>
+                                            <td><input size="60" type="email" name="email" value="elena.colombo@email.it" required></td>
                                         </tr>
                                         <tr>
                                             <td>Password</td>
-                                            <td><input size="50" type="password" name="password" required></td>
+                                            <td><input size="60" type="password" name="password" required></td>
                                         </tr>
                                         <tr>
                                             <td>Titolo</td>
@@ -123,45 +123,45 @@
                                         </tr>
                                         <tr>
                                             <td>Nome</td>
-                                            <td><input responsive size="50" type="text" name="nome" value="Elena" required></td>
+                                            <td><input responsive size="60" type="text" name="nome" value="Elena" required></td>
                                         </tr>
                                         <tr>
                                             <td>Cognome</td>
-                                            <td><input size="50" type="text" name="cognome" value="Colombo" required></td>
+                                            <td><input size="60" type="text" name="cognome" value="Colombo" required></td>
                                         </tr>
                                         <tr>
                                             <td>Data di nascita</td>
-                                            <td><input size="50" type="date" name="nascita" value="1980-01-01" required></td>
+                                            <td><input type="date" name="nascita" value="1980-01-01" required></td>
                                         </tr>
                                         <tr>
                                             <td>Codice fiscale</td>
-                                            <td><input size="50" type="text" name="codicefiscale" maxlength="16" value="CLMLNE80A41L736J" required></td>
+                                            <td><input size="60" type="text" name="codicefiscale" maxlength="16" value="CLMLNE80A41L736J" required></td>
                                         </tr>
                                         <tr>
                                             <td>Indirizzo (residenza)</td>
-                                            <td><input size="50" type="text" name="indirizzo" value="via Monte Fato, 1" required></td>
+                                            <td><input size="60" type="text" name="indirizzo" value="via Monte Fato, 1" required></td>
                                         </tr>
                                         <tr>
                                             <td>C.A.P.</td>
-                                            <td><input size="50" type="text" name="cap" value="30170" required></td>
+                                            <td><input size="60" type="text" name="cap" value="30170" required></td>
                                         </tr>
                                         <tr>
                                             <td>Città</td>
-                                            <td><input size="50" type="text" name="citta" value="Mestre" required></td>
+                                            <td><input size="60" type="text" name="citta" value="Mestre" required></td>
                                         </tr>
                                         <tr>
                                             <td>Provincia</td>
-                                            <td><input size="50" type="text" name="provincia" value="VE" required></td>
+                                            <td><input size="60" type="text" name="provincia" value="VE" required></td>
                                         </tr>
                                         <tr>
                                             <td>Stato</td>
-                                            <td><input size="50" type="text" name="stato" value="Italia" required></td>
+                                            <td><input size="60" type="text" name="stato" value="Italia" required></td>
                                         </tr>
                                         <tr>
                                             <td>Telefono (facoltativo)</td>
-                                            <td><input size="50" type="tel" name="cellulare" type="number" value="0123456789"></td>
+                                            <td><input size="60" type="tel" name="cellulare" type="number" value="0123456789"></td>
                                         </tr>
-                                    </tbody>
+                                        </tbody>
                                     </table>
                                     </div>
                                     <input type="submit"  class="btn btn-default" value="Conferma" formaction="profilo.html">
@@ -179,7 +179,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="email" name="email" value="elena.colombo@email.it" required></td>
+                                            <td><input type="email" name="email" value="elena.colombo@email.it" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -187,7 +187,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="password" name="password" required></td>
+                                            <td><input type="password" name="password" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -204,8 +204,9 @@
                                         <tr>
                                             <td>Nome</td>
                                         </tr>
+                                        <br>
                                         <tr>
-                                            <td><input responsive size="50" type="text" name="nome" value="Elena" required></td>
+                                            <td><input responsiveN type="text" name="nome" value="Elena" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -213,7 +214,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="cognome" value="Colombo" required></td>
+                                            <td><input type="text" name="cognome" value="Colombo" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -221,7 +222,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="date" name="nascita" value="1980-01-01" required></td>
+                                            <td><input type="date" name="nascita" value="1980-01-01" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -229,7 +230,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="codicefiscale" maxlength="16" value="CLMLNE80A41L736J" required></td>
+                                            <td><input type="text" name="codicefiscale" maxlength="16" value="CLMLNE80A41L736J" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -237,7 +238,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="indirizzo" value="via Monte Fato, 1" required></td>
+                                            <td><input type="text" name="indirizzo" value="via Monte Fato, 1" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -245,7 +246,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="cap" value="30170" required></td>
+                                            <td><input type="text" name="cap" value="30170" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -253,7 +254,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="citta" value="Mestre" required></td>
+                                            <td><input type="text" name="citta" value="Mestre" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -261,7 +262,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="provincia" value="VE" required></td>
+                                            <td><input type="text" name="provincia" value="VE" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -269,7 +270,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="stato" value="Italia" required></td>
+                                            <td><input type="text" name="stato" value="Italia" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -277,7 +278,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="tel" name="cellulare" type="number" value="0123456789"></td>
+                                            <td><input type="tel" name="cellulare" type="number" value="0123456789"></td>
                                         </tr>
                                         <br><br>
                                     </div>
