--- a/viaggi/acquisto-viaggio.html
+++ b/viaggi/acquisto-viaggio.html
@@ -82,7 +82,13 @@
                         <div class="panel-body">
 
                             <div class="panel-body" style="padding: 0">
-                                <img src="/img/parigi550x550.jpg " alt="immagine di copertina del viaggio " class="purchase-item-thumbnail fixed hidden-xs " />
+                                
+                                <div class="row visible-xs">
+                                    <div class="col-xs-12">
+                                        <img class="img-responsive center-block" src="/img/parigi250x250.jpg" alt="immagine di copertina del viaggio">
+                                    </div>
+                                </div>
+                                <img src="/img/parigi550x550.jpg " alt="immagine di copertina del viaggio " class="purchase-item-thumbnail fixed hidden-xs" />
 
                                 <div class="purchase-item-details">
                                     <h2>Parigi</h2>
@@ -250,7 +256,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td>Nome</td>
-                                                        <td><input responsive size="50" type="text" name="nome" required></td>
+                                                        <td><input size="50" type="text" name="nome" required></td>
                                                     </tr>
                                                     <tr>
                                                         <td>Cognome</td>
@@ -369,8 +375,9 @@
                                                 <tr>
                                                     <td>Nome</td>
                                                 </tr>
+                                                <br>
                                                 <tr>
-                                                    <td><input responsive size="50" type="text" name="nome"></td>
+                                                    <td><input type="text" name="nome"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -378,7 +385,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="cognome"></td>
+                                                    <td><input type="text" name="cognome"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -386,7 +393,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="date" name="nascita" required></td>
+                                                    <td><input type="date" name="nascita" required></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -394,7 +401,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="codicefiscale" maxlength="16" required></td>
+                                                    <td><input type="text" name="codicefiscale" maxlength="16" required></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -402,7 +409,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="cap"></td>
+                                                    <td><input type="text" name="cap"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -410,7 +417,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="citta"></td>
+                                                    <td><input type="text" name="citta"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -418,7 +425,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="provincia"></td>
+                                                    <td><input type="text" name="provincia"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -426,7 +433,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="stato" required></td>
+                                                    <td><input type="text" name="stato" required></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -434,7 +441,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="email" name="email" required></td>
+                                                    <td><input type="email" name="email" required></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -442,7 +449,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="tel" name="cellulare" type="number"></td>
+                                                    <td><input type="tel" name="cellulare" type="number"></td>
                                                 </tr>
                                                 <br><br>
                                             </div>
@@ -472,8 +479,9 @@
                                                 <tr>
                                                     <td>Nome</td>
                                                 </tr>
+                                                <br>
                                                 <tr>
-                                                    <td><input responsive size="50" type="text" name="nome"></td>
+                                                    <td><input type="text" name="nome"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -481,7 +489,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="cognome"></td>
+                                                    <td><input type="text" name="cognome"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -489,7 +497,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="cap"></td>
+                                                    <td><input type="text" name="cap"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -497,7 +505,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="citta"></td>
+                                                    <td><input type="text" name="citta"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -505,7 +513,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="provincia"></td>
+                                                    <td><input type="text" name="provincia"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -513,7 +521,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="text" name="stato" required></td>
+                                                    <td><input type="text" name="stato" required></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -521,7 +529,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="email" name="email"></td>
+                                                    <td><input type="email" name="email"></td>
                                                 </tr>
                                                 <br><br>
                                                 <tr>
@@ -529,7 +537,7 @@
                                                 </tr>
                                                 <br>
                                                 <tr>
-                                                    <td><input size="50" type="tel" name="cellulare" type="number"></td>
+                                                    <td><input type="tel" name="cellulare" type="number"></td>
                                                 </tr>
                                                 <br><br>
                                             </div>
