--- a/registrazione.html
+++ b/registrazione.html
@@ -164,7 +164,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="email" name="email" required></td>
+                                            <td><input type="email" name="email" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -172,7 +172,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="password" name="password" required></td>
+                                            <td><input type="password" name="password" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -190,7 +190,7 @@
                                             <td>Nome</td>
                                         </tr>
                                         <tr>
-                                            <td><input responsive size="50" type="text" name="nome" required></td>
+                                            <td><input type="text" name="nome" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -198,7 +198,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="cognome" required></td>
+                                            <td><input type="text" name="cognome" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -206,7 +206,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="date" name="nascita" required></td>
+                                            <td><input type="date" name="nascita" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -214,7 +214,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="codicefiscale" maxlength="16" required></td>
+                                            <td><input type="text" name="codicefiscale" maxlength="16" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -222,7 +222,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="indirizzo" required></td>
+                                            <td><input type="text" name="indirizzo" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -230,7 +230,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="cap" required></td>
+                                            <td><input type="text" name="cap" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -238,7 +238,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="citta" required></td>
+                                            <td><input type="text" name="citta" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -246,7 +246,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="provincia" required></td>
+                                            <td><input type="text" name="provincia" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -254,7 +254,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="text" name="stato" required></td>
+                                            <td><input type="text" name="stato" required></td>
                                         </tr>
                                         <br><br>
                                         <tr>
@@ -262,7 +262,7 @@
                                         </tr>
                                         <br>
                                         <tr>
-                                            <td><input size="50" type="tel" name="cellulare" type="number"></td>
+                                            <td><input type="tel" name="cellulare" type="number"></td>
                                         </tr>
                                         <br><br>
                                     </tbody>
