--- a/viaggi/acquisto-viaggio_riepilogo.html
+++ b/viaggi/acquisto-viaggio_riepilogo.html
@@ -83,10 +83,15 @@
                         <div class="panel-body">
 
                             <div class="panel-body" style="padding: 0">
-                                <img src="/img/parigi550x550.jpg " alt="immagine di copertina del viaggio " class="purchase-item-thumbnail fixed hidden-xs " />
+                                <div class="row visible-xs">
+                                    <div class="col-xs-12">
+                                        <img class="img-responsive center-block" src="/img/parigi250x250.jpg" alt="immagine di copertina del viaggio">
+                                    </div>
+                                </div>
+                                <img src="/img/parigi550x550.jpg " alt="immagine di copertina del viaggio " class="purchase-item-thumbnail fixed hidden-xs" />
 
                                 <div class="purchase-item-details">
-                                    <p>Parigi</p>
+                                    <h2>Parigi</h2>
                                     <p>Dal 01/05/2015 al 07/05/2015</p>
                                     <p>2 adulti</p>
                                     <p>0 escursioni</p>
