--- a/viaggi/oceania/sydney.html
+++ b/viaggi/oceania/sydney.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Glas Travels">
-    <meta name="description" content="La compagnia di viaggi #1 al mondo!">
-    <title>Glas Travels</title>
+    <meta name="description" content="Prenota il tuo viaggio a Sydney con la migliore compagnia del mondo! Scopri l'offerta!">
+    <title>Glas Travels | Sydney</title>
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- jQuery -->
