--- a/business.html
+++ b/business.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Glas Travels">
-    <meta name="description" content="La compagnia di viaggi #1 al mondo!">
-    <title>Glas Travels</title>
+    <meta name="description" content="In linea con la legge sulla trasparenza finanziaria, ecco online il nostro bilancio dell'ultimo anno.">
+    <title>Glas Travels | Business</title>
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- jQuery -->
