--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Glas Travels">
-    <meta name="description" content="La compagnia di viaggi #1 al mondo!">
-    <title>Glas Travels</title>
+    <meta name="description" content="Glas Travels! La compagnia di viaggi #1 al mondo! Scopri di più su di noi!">
+    <title>Glas Travels | Profilo aziendale</title>
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- jQuery -->
