--- a/recensioni/20140620-1_norvegia.html
+++ b/recensioni/20140620-1_norvegia.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Glas Travels">
-    <meta name="description" content="La compagnia di viaggi #1 al mondo!">
-    <title>Glas Travels</title>
+    <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua...">
+    <title>Glas Travels | Recensione Norvegia</title>
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- jQuery -->
