--- a/sicurezza.html
+++ b/sicurezza.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Glas Travels">
-    <meta name="description" content="La compagnia di viaggi #1 al mondo!">
-    <title>Glas Travels</title>
+    <meta name="description" content="Leggi l'informativa relativa alla sicurezza e la privacy della nostra azienda.">
+    <title>Glas Travels | Sicurezza &amp; Privacy</title>
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- jQuery -->
