--- a/viaggi/acquisto-viaggio_riepilogo.html
+++ b/viaggi/acquisto-viaggio_riepilogo.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Glas Travels">
     <meta name="description" content="La compagnia di viaggi #1 al mondo!">
-    <title>Glas Travels</title>
+    <title>Glas Travels | Acquisto viaggio</title>
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- jQuery -->
