--- a/viaggi/oceania.html
+++ b/viaggi/oceania.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Glas Travels">
-    <meta name="description" content="La compagnia di viaggi #1 al mondo!">
-    <title>Glas Travels</title>
+    <meta name="description" content="Immergiti nella favolosa natura dell'oceania, attraversando mezzo mondo con la migliore compagnia aerea!">
+    <title>Glas Travels | Oceania</title>
     <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 
     <!-- jQuery -->
